# vehicle_reid

./: README.md
src/: CMakeLists.txt
src/common/: CMakeLists.txt  common.cpp  common.h  concurrent_queue.h  jpg_codec.cpp  jpg_codec.h
src/edge/: CMakeLists.txt  TH_ErrorDef.h  TH_PlateID.h  lpr_alg.cpp  lpr_alg.h  lpr_edge.cpp  lpr_test.cpp  test_shm.cpp
src/integrate/: CMakeLists.txt  TH_PlateID.h  jpg_codec.cpp  jpg_codec.h  single_reid.cpp  vehicle_reid.cpp
src/lib/: libthplateid.a.last
